--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Host or join high-performing video meetings, go live, collaborate with your friends, and share anywhere. " />
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <link rel="apple-touch-icon" href="logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -31,5 +30,20 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root" class="body-wrap"></div>
 </body>
+<script src="https://accounts.google.com/gsi/client" async defer></script>
+<script>
+  window.onload = function () {
+    google.accounts.id.initialize({
+      client_id: '150668394436-t4sh915ilqum6t7a8lf0i4p42ilkg0s3.apps.googleusercontent.com'
+    });
+    google.accounts.id.prompt((notification) => {
+      if (notification.isNotDisplayed() || notification.isSkippedMoment()) {
+        // try next provider if OneTap is not displayed or skipped
+        console.log("Not Visible")
+      }
+    });
+  }
+</script>
+
 
 </html>
